<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Calendar">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="113dp"
        android:layout_marginTop="151dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <ImageButton
            android:id="@+id/imCalendar"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/calendar"
            android:foreground="@drawable/c" />

        <ImageButton
            android:id="@+id/imQuote"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/Quote"
            android:foreground="@drawable/q" />

        <ImageButton
            android:id="@+id/imCheckIn"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/checkin"
            android:foreground="@drawable/check_logo_png_17" />

        <ImageButton
            android:id="@+id/imMessages"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/message"
            android:foreground="@drawable/mes" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="172dp"
        android:layout_height="199dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/roger"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thh" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="222dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/calendarDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="68dp"
        android:text="@string/calendarDes"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>