<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".day5">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="334dp"
        android:layout_height="113dp"
        android:layout_marginTop="151dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <ImageButton
            android:id="@+id/imCalendar"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/calendar"
            android:foreground="@drawable/c" />

        <ImageButton
            android:id="@+id/imQuote"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/Quote"
            android:foreground="@drawable/q" />

        <ImageButton
            android:id="@+id/imCheckIn"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/checkin"
            android:foreground="@drawable/check_logo_png_17" />

        <ImageButton
            android:id="@+id/imMessages"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/message"
            android:foreground="@drawable/mes" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="240dp"
        android:layout_height="194dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="99dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thh" />

    <TextView
        android:id="@+id/dayFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="27dp"
        android:text="@string/dayFive"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
</androidx.constraintlayout.widget.ConstraintLayout>