<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Quote">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="113dp"
        android:layout_marginTop="151dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imCalendar"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/calendar"
            android:foreground="@drawable/c" />

        <ImageButton
            android:id="@+id/imQuote"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/Quote"
            android:foreground="@drawable/q" />

        <ImageButton
            android:id="@+id/imCheckIn"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/checkin"
            android:foreground="@drawable/check_logo_png_17" />

        <ImageButton
            android:id="@+id/imMessages"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/message"
            android:foreground="@drawable/mes" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="156dp"
        android:layout_height="128dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="622dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/thh" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="375dp"
        android:layout_height="554dp"
        android:layout_marginTop="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/quoteDes"
        android:layout_width="217dp"
        android:layout_height="58dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="38dp"
        android:text="@string/quoteDes"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>